# tess

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  tess-config.cmake.in
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: .gitignore  CMakeLists.txt
examples/src/: highlight.cpp  simple.cpp
include/: basis.hpp  grid.hpp  hax.hpp  hex.hpp  hexes.hpp  math.hpp  point.hpp
include/tess/: basis.hpp  hex.hpp  math.hpp  tess.hpp
src/: CMakeLists.txt  Makefile  basis.hpp  fields.hpp  grid.cpp  hex.cpp  hex.hpp  math.cpp  math.hpp  point.cpp  point.hpp  tess.hpp  test  test.cpp
test/: CMakeLists.txt  test.cpp  test_basis.cpp  test_hex.cpp  test_hex_range.cpp  test_hex_round.cpp  test_line.cpp  test_point.cpp  utility.hpp
